<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.localNews.NewsDetailsActivity">


    <TextView
        android:id="@+id/backTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/swissra_bold"
        android:text="@string/back"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:fontFamily="@font/swissra_bold"
        android:text="@string/share"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/backTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backTextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:paddingStart="5dp"
        android:text="@string/news_details"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backTextView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/last_update_data"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/photo"
        android:scaleType="centerCrop"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_share_facebook"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="#2D609B"
        android:textSize="13sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/share_button"
        android:text="@string/share_facebook"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_share_twitter"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="13sp"
        android:layout_marginStart="8dp"
        android:text="@string/share_facebook"
        android:backgroundTint="#00C3F3"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:background="@drawable/share_button"
        app:layout_constraintBottom_toBottomOf="@+id/button_share_facebook"
        app:layout_constraintStart_toEndOf="@+id/button_share_facebook" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_share_twitter"
        app:layout_constraintStart_toEndOf="@+id/button_share_twitter"
        app:layout_constraintTop_toTopOf="@+id/button_share_twitter"
        app:srcCompat="@drawable/ic_baseline_share_24" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:text="@string/coin_news_details"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_share_facebook"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>